# timbre-qualifier-SMC

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
experiments/cross-validation_timbre-model/: config.yaml
experiments/cross-validation_timbre-model/scripts/: CMTTP.py  compute_predictions_metrics.py  cross_validation_training.py  main.py  samples_dataset.py  timber_traits_predictions_radar_charts.py  timbre_mlp.py
experiments/cross-validation_timbre_model/: config.yaml
experiments/cross-validation_timbre_model/scripts/: CMTTP.py  compute_predictions_metrics.py  cross_validation_training.py  main.py  timber_traits_predictions_radar_charts.py
experiments/synthesizer-assessment/: config.yaml
experiments/synthesizer_assessment/: config.yaml
experiments/synthesizer_assessment/scripts/: RWC_nearest_and_furthest_neighbors.py  TokenSynth_nearest_and_furthest_neighbors.py  audio_to_embedding_tensor.py  compute_embeddings_metadata.py  compute_mean_embeddings_RWC.py  compute_predictions_metrics.py  compute_synthesized_samples_embeddings.py  compute_synthesized_samples_metadata.py  create_midi_files.py  main.py  samples_dataset.py  synthesize_samples.py  timbre_mlp.py  train_model.py  utils.py  wav_to_spectrogram.py
experiments/timbre-model/: config.yaml
process_RWC/: compute_split_metadata.py  create_RWC_metadata.py  create_embeddings_metadata.py  preprocess_RWC.py  process_RWC.py  samples_to_embeddings.py
